<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black"
        android:orderInCategory="3"
        android:title="@string/search_view"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_icon"
        android:orderInCategory="2"
        android:title="@string/setting_menu_item_title"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/favorites_menu_icon"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/favorites_menu_item_title"/>

</menu>